--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "require": {
         "php": "^7.4",
-        "twbs/bootstrap": "5.0",
+        "twbs/bootstrap": "^5.3",
         "doctrine/dbal": "^2.13"  
     },
     "autoload": {
